[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/FFFFORWA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://overview/overview.gd" type="Script" id=2]
[ext_resource path="res://choice/choice.tscn" type="PackedScene" id=3]
[ext_resource path="res://player_indicator/player_indicator.tscn" type="PackedScene" id=4]
[ext_resource path="res://dice/dice.tscn" type="PackedScene" id=5]
[ext_resource path="res://overview/new_dynamicfont.tres" type="DynamicFont" id=6]
[ext_resource path="res://arena/arena.png" type="Texture" id=7]
[ext_resource path="res://arena_background/arena_background.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.203922, 1, 0.137255, 0.219608 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.054902, 1, 0, 0.0980392 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 960, 540 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Control" parent="." instance=ExtResource( 8 )]

[node name="Arena" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
centered = false

[node name="Player1" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 960.0
margin_bottom = 91.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "
Roll the first match"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 95.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Dice" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
position = Vector2( 711, 357 )

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 456.0
margin_bottom = 445.0
rect_min_size = Vector2( 456, 445 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/Control"]
anchor_top = 0.065
anchor_right = 0.989
anchor_bottom = 0.883
margin_top = 0.0749969
margin_right = 0.0159912
margin_bottom = 0.0650024
custom_styles/panel = SubResource( 2 )

[node name="PlayerIndicator1" parent="VBoxContainer/HBoxContainer/Control" instance=ExtResource( 4 )]
margin_left = 17.0
margin_top = 86.0
margin_right = -345.0
margin_bottom = -329.0
rect_pivot_offset = Vector2( 56, 17 )
custom_fonts/font = ExtResource( 6 )

[node name="PlayerIndicator2" parent="VBoxContainer/HBoxContainer/Control" instance=ExtResource( 4 )]
margin_left = 351.0
margin_top = 86.0
margin_right = -11.0
margin_bottom = -329.0
rect_pivot_offset = Vector2( 56, 17 )
custom_fonts/font = ExtResource( 6 )

[node name="PlayerIndicator3" parent="VBoxContainer/HBoxContainer/Control" instance=ExtResource( 4 )]
margin_left = 17.0
margin_top = 342.0
margin_right = -345.0
margin_bottom = -73.0
rect_pivot_offset = Vector2( 56, 17 )
custom_fonts/font = ExtResource( 6 )

[node name="PlayerIndicator4" parent="VBoxContainer/HBoxContainer/Control" instance=ExtResource( 4 )]
margin_left = 351.0
margin_top = 342.0
margin_right = -11.0
margin_bottom = -73.0
rect_pivot_offset = Vector2( 56, 17 )
custom_fonts/font = ExtResource( 6 )

[node name="Line2D1" type="Line2D" parent="VBoxContainer/HBoxContainer/Control"]
position = Vector2( 129, 101 )
points = PoolVector2Array( 0, 0, 200, 0 )
default_color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Control/Line2D1"]
margin_left = 55.0
margin_top = -48.0
margin_right = 138.0
margin_bottom = -4.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1

[node name="Line2D2" type="Line2D" parent="VBoxContainer/HBoxContainer/Control"]
position = Vector2( 129, 359 )
points = PoolVector2Array( 0, 0, 200, 0 )
default_color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Control/Line2D2"]
margin_left = 55.0
margin_top = -48.0
margin_right = 138.0
margin_bottom = -4.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "2"
align = 1

[node name="Line2D3" type="Line2D" parent="VBoxContainer/HBoxContainer/Control"]
position = Vector2( 57, 130 )
rotation = 1.5708
points = PoolVector2Array( 0, 0, 200, 0 )
default_color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Control/Line2D3"]
margin_left = 75.0
margin_top = 17.0
margin_right = 158.0
margin_bottom = 61.0
rect_rotation = 270.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "3"
align = 1

[node name="Line2D4" type="Line2D" parent="VBoxContainer/HBoxContainer/Control"]
position = Vector2( 390, 130 )
rotation = 1.5708
points = PoolVector2Array( 0, 0, 200, 0 )
default_color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Control/Line2D4"]
margin_left = 74.0
margin_top = 63.0
margin_right = 157.0
margin_bottom = 107.0
rect_rotation = 270.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "4"
align = 1

[node name="Line2D5" type="Line2D" parent="VBoxContainer/HBoxContainer/Control"]
position = Vector2( 129, 134 )
rotation = 0.785398
points = PoolVector2Array( 0, 0, 270, 0 )
default_color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Control/Line2D5"]
margin_left = 27.5771
margin_top = 60.1041
margin_right = 110.577
margin_bottom = 104.104
rect_rotation = 270.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "5"
align = 1

[node name="Line2D6" type="Line2D" parent="VBoxContainer/HBoxContainer/Control"]
position = Vector2( 319, 138 )
rotation = 2.35619
points = PoolVector2Array( 0, 0, 270, 0 )
default_color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Control/Line2D6"]
margin_left = 31.8198
margin_top = 17.6777
margin_right = 114.82
margin_bottom = 61.6777
rect_rotation = 270.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "6"
align = 1

[node name="Choice" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 460.0
margin_right = 960.0
margin_bottom = 445.0

[node name="DramaticMatchTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="animation_end" from="VBoxContainer/HBoxContainer/Dice" to="." method="_on_Dice_animation_end"]
[connection signal="result" from="VBoxContainer/HBoxContainer/Choice" to="." method="_on_Choice_result"]
[connection signal="timeout" from="DramaticMatchTimer" to="." method="_on_DramaticMatchTimer_timeout"]
